# yomichan

./: Cargo.toml  README.md
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
src/: applications.rs  events.rs  main.rs  tts.rs
src/commands/: join.rs  leave.rs  mod.rs
src/events/: message.rs  mod.rs  voice_state.rs
