[package]
name = "yomichan"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
dotenvy = "0.15.7"
tokio = { version = "1.36.0", features = ["full"] }
twilight-gateway = "0.15.4"
twilight-http = "0.15.4"
